fix: fixed some bugs in FRONTEND pom.xml